Making the gradient click-through in ChromeSigninViewController

"Settings" button is partially below the gradient while using small screen
like iPhone SE. This is probably the reason why testSignInOpenSettings
and testSignInAndTapSettingsLink can be flaky.

Also, updating those 2 tests to make it more robust to animation by
adding calls to WaitForMatcher(), to wait for "Settings" to be displayed.

BUG=718023

Review-Url: https://codereview.chromium.org/2906313004
Cr-Commit-Position: refs/heads/master@{#476691}

Former-commit-id: b87d80f6485276511b3c543e90cde926eed2838d