ios/chrome/browser/ui/authentication/signin_interaction_controller_egtest.mm
@@ -362,8 +362,7 @@ void AssertAuthenticatedIdentityInActiveProfile(ChromeIdentity* identity) {
 // Tests that signing in, tapping the Settings link on the confirmation screen
 // and closing the Settings correctly leaves the user signed in without any
 // Settings shown.
-// TODO(crbug.com/718023): Re-enable test.
-- (void)DISABLED_testSignInOpenSettings {
+- (void)testSignInOpenSettings {
   ChromeIdentity* identity = GetFakeIdentity1();
   ios::FakeChromeIdentityService::GetInstanceFromChromeProvider()->AddIdentity(
       identity);
@@ -376,10 +375,13 @@ void AssertAuthenticatedIdentityInActiveProfile(ChromeIdentity* identity) {
   // Tap Settings link.
   id<GREYMatcher> settings_link_matcher = grey_allOf(
       grey_accessibilityLabel(@"Settings"), grey_sufficientlyVisible(), nil);
+  WaitForMatcher(settings_link_matcher);
   [[EarlGrey selectElementWithMatcher:settings_link_matcher]
       performAction:grey_tap()];
 
-  [[EarlGrey selectElementWithMatcher:NavigationBarDoneButton()]
+  id<GREYMatcher> done_button_matcher = NavigationBarDoneButton();
+  WaitForMatcher(done_button_matcher);
+  [[EarlGrey selectElementWithMatcher:done_button_matcher]
       performAction:grey_tap()];
 
   // All Settings should be gone and user signed in.
